<resources>
    <string name="app_name">Load App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description_1">Glide repository is downloaded</string>
    <string name="notification_description_2">The Project 3 repository is downloaded</string>
    <string name="notification_description_3">Retrofit repository is downloaded</string>
    <string name="notification_button">Check the status</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="download_image">Download Image</string>
    <string name="label_1">Glide - Image Loading Library by Bump Tech</string>
    <string name="label_2">LoadApp - Current Repository by Udacity</string>
    <string name="label_3">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="select_file">Please select file to download!</string>
    <string name="file_name">File Name:</string>
    <string name="status">Status:</string>
    <string name="success">Success</string>
    <string name="ok">OK</string>
    <string name="fail">Fail</string>
    <string name="notification_channel_name">Load App Channel</string>
    <string name="notification_channel_description">This channel used to receiver notification from app!</string>
</resources>
